# stock-agent-orchestrator

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: beta.example.toml  beta.live.example.toml  formal.example.toml
docs/: APPLICATION_READINESS_ZH.md  APPLICATION_ZH.md  ARCHITECTURE.md  BETA_CALLBACK_DEPLOY_PLAN_ZH.md  BETA_LIVE_CONFIG_REVIEW_ZH.md  BETA_LIVE_CONTROL_PANEL_ZH.md  BETA_LIVE_ENV_ZH.md  BETA_LIVE_EVIDENCE_REHEARSAL_ZH.md  BETA_LIVE_FINAL_GATE_ZH.md  BETA_LIVE_HANDOFF_ZH.md  BETA_LIVE_INTAKE_CHECKLIST_ZH.md  BETA_LIVE_LAUNCH_PACKET_ZH.md  BETA_LIVE_MESSAGE_SCRIPT_ZH.md  BETA_LIVE_PREFLIGHT_ZH.md  BETA_LIVE_READINESS_BUNDLE_ZH.md  BETA_LIVE_RUNBOOK_ZH.md  BETA_VALIDATION_GUIDE_ZH.md  BETA_VALIDATION_REPORT_TEMPLATE_ZH.md  BETA_VALIDATION_REPORT_ZH.md  CODEX_FEISHU_PARITY_ZH.md  DEMO_SCRIPT_ZH.md  FEISHU_CONNECTOR_ZH.md  FEISHU_FIRST_ZH.md  FEISHU_LONG_CONNECTION_ZH.md  INSTALL_ZH.md  INTRO_ZH.md  LONG_RUNNING_TASK_ZH.md  MAINTENANCE_ZH.md  PREREQUISITES_ZH.md  ROADMAP_ZH.md  ROLLOUT.md  SHADOW_MODE_ZH.md  WORKFLOW_ZH.md
scripts/: bootstrap.ps1  bootstrap.sh
tests/: test_application_readiness.py  test_beta_callback_deploy_plan.py  test_beta_callback_probe.py  test_beta_evidence_collector.py  test_beta_live_config.py  test_beta_live_config_env.py  test_beta_live_config_review.py  test_beta_live_config_status.py  test_beta_live_control_panel.py  test_beta_live_evidence_rehearsal.py  test_beta_live_final_gate.py  test_beta_live_handoff.py  test_beta_live_intake_checklist.py  test_beta_live_launch_packet.py  test_beta_live_message_script.py  (+21 more)
(+49 files in other folders)
